--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ a:hover {
 header {
     font-family: monospace;
     position: fixed;
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(52, 58, 64, 0.9);
     padding: 10px 15px 10px 15px;
     width: 90%;
     width: calc(100% - 30px);
@@ -31,9 +31,9 @@ header {
     *zoom: 1;
     top: 0px;
     left: 0px;
-    -webkit-box-shadow: 0 0px 10px rgba(128, 128, 128, 0.25);
-    -moz-box-shadow: 0 0px 10px rgba(128, 128, 128, 0.25);
-    box-shadow: 0 0px 10px rgba(128, 128, 128, 0.25);
+    -webkit-box-shadow: 0 0px 10px rgba(24, 100, 224, 0.25);
+    -moz-box-shadow: 0 0px 10px rgba(24, 100, 224, 0.25);
+    box-shadow: 0 0px 10px rgba(24, 100, 224, 0.25);
 }
 
 header nav.left {
@@ -57,6 +57,7 @@ header nav ul li {
 }
 
 header nav ul li a {
+    color: rgba(255,255,255, 1.0);
     font-size: 12pt;
 	line-height: 30px;
 }
@@ -68,6 +69,18 @@ main {
     margin: 0 auto;
     text-align: left;
     padding: 80px 20px 50px 20px;
+}
+
+main h1 {
+    margin: 0;
+}
+
+main time {
+    font-size:10pt;
+    margin:0;
+    padding:0;
+    color: slategray;
+    line-height: 30px;
 }
 
 summary {
